==> KitSprout/SmartIMU/Software/SmartIMU_TestHardware/Program/modules/module_mpu9250.c <==
#include "drivers\stm32f4_system.h"
#include "drivers\stm32f4_spi.h"
#include "module_mpu9250.h"
#define SPIx                        SPI1
#define SPIx_CLK_ENABLE()           __HAL_RCC_SPI1_CLK_ENABLE()
#define SPIx_SPEED_HIGH             SPI_BAUDRATEPRESCALER_2
#define SPIx_SPEED_LOW              SPI_BAUDRATEPRESCALER_256
#define SPIx_CSM_PIN                GPIO_PIN_4
#define SPIx_CSM_GPIO_PORT          GPIOA
#define SPIx_CSM_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOA_CLK_ENABLE()
#define SPIx_CSM_AF                 GPIO_AF5_SPI1
#define SPIx_CSM_H()                __GPIO_SET(SPIx_CSM_GPIO_PORT, SPIx_CSM_PIN)
#define SPIx_CSM_L()                __GPIO_RST(SPIx_CSM_GPIO_PORT, SPIx_CSM_PIN)
#define SPIx_SCK_PIN                GPIO_PIN_5
#define SPIx_SCK_GPIO_PORT          GPIOA
#define SPIx_SCK_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOA_CLK_ENABLE()
#define SPIx_SCK_AF                 GPIO_AF5_SPI1
#define SPIx_SDO_PIN                GPIO_PIN_6
#define SPIx_SDO_GPIO_PORT          GPIOA
#define SPIx_SDO_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOA_CLK_ENABLE()
#define SPIx_SDO_AF                 GPIO_AF5_SPI1
#define SPIx_SDI_PIN                GPIO_PIN_7
#define SPIx_SDI_GPIO_PORT          GPIOA
#define SPIx_SDI_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOA_CLK_ENABLE()
#define SPIx_SDI_AF                 GPIO_AF5_SPI1
#define _USE_MAG_AK8963
#define MAG_READ_DELAY 256

void MPU9250_SetSpeed( uint8_t speedSel )
{
  __HAL_SPI_DISABLE(&MPUx_InitStruct);
  MPUx_InitStruct.Init.BaudRatePrescaler = speedSel;
  HAL_SPI_Init(&MPUx_InitStruct);
  __HAL_SPI_ENABLE(&MPUx_InitStruct);
}

void MPU9250_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;

  /* SPI Clk ******************************************************************/
  SPIx_CSM_GPIO_CLK_ENABLE();
  SPIx_SCK_GPIO_CLK_ENABLE();
  SPIx_SDO_GPIO_CLK_ENABLE();
  SPIx_SDI_GPIO_CLK_ENABLE();
//  SPIx_INTM_GPIO_CLK_ENABLE();
  SPIx_CLK_ENABLE();

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.Mode      = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = SPIx_CSM_PIN;
  HAL_GPIO_Init(SPIx_CSM_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = SPIx_SCK_PIN;
  GPIO_InitStruct.Alternate = SPIx_SCK_AF;
  HAL_GPIO_Init(SPIx_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = SPIx_SDO_PIN;
  GPIO_InitStruct.Alternate = SPIx_SDO_AF;
  HAL_GPIO_Init(SPIx_SDO_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = SPIx_SDI_PIN;
  GPIO_InitStruct.Alternate = SPIx_SDI_AF;
  HAL_GPIO_Init(SPIx_SDI_GPIO_PORT, &GPIO_InitStruct);

  SPIx_CSM_H();  // LOW ENABLE

  // EXIT Config
//  GPIO_InitStruct.Mode  = GPIO_MODE_IT_RISING;
//  GPIO_InitStruct.Pull  = GPIO_PULLUP;
//  GPIO_InitStruct.Speed = GPIO_SPEED_HIGH;
//  GPIO_InitStruct.Pin   = SPIx_INTM_PIN;
//  HAL_GPIO_Init(SPIx_INTM_GPIO_PORT, &GPIO_InitStruct);

//  HAL_NVIC_SetPriority(SPIx_INTM_IRQ, 14, 0);
//  HAL_NVIC_EnableIRQ(SPIx_INTM_IRQ);

  /* SPI Init ****************************************************************/
  MPUx_InitStruct.Instance               = SPIx;
  MPUx_InitStruct.Init.Mode              = SPI_MODE_MASTER;
  MPUx_InitStruct.Init.Direction         = SPI_DIRECTION_2LINES;
  MPUx_InitStruct.Init.DataSize          = SPI_DATASIZE_8BIT;
  MPUx_InitStruct.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  MPUx_InitStruct.Init.CLKPhase          = SPI_PHASE_2EDGE;
  MPUx_InitStruct.Init.NSS               = SPI_NSS_SOFT;
  MPUx_InitStruct.Init.BaudRatePrescaler = SPIx_SPEED_LOW;
  MPUx_InitStruct.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  MPUx_InitStruct.Init.TIMode            = SPI_TIMODE_DISABLE;
  MPUx_InitStruct.Init.CRCCalculation    = SPI_CRCCALCULATION_ENABLE;
  MPUx_InitStruct.Init.CRCPolynomial     = 7;
  HAL_SPI_Init(&MPUx_InitStruct);

  __HAL_SPI_ENABLE(&MPUx_InitStruct);
}
